--- a/package.json
+++ b/package.json
@@ -3,32 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.4.1",
-    "@heroicons/react": "^1.0.2",
-    "@popperjs/core": "^2.11.7",
-    "@videosdk.live/react-sdk": "^0.1.74",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
+    "@popperjs/core": "^2.11.8",
+    "@videosdk.live/react-sdk": "^0.3.7",
     "@windmill/react-ui": "^0.6.0",
-    "lottie-react": "^2.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-player": "^2.10.1",
-    "react-responsive": "^9.0.2",
+    "lottie-react": "^2.4.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-player": "^2.16.0",
+    "react-responsive": "^10.0.1",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^9.1.2",
-    "web-vitals": "^3.3.1"
+    "react-toastify": "^11.0.5",
+    "web-vitals": "^5.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "0.5.0-alpha.2",
-    "autoprefixer": "^10.3.1",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/typography": "0.5.16",
+    "@vitejs/plugin-react": "^4.5.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.4.1",
+    "vite": "^6.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "kill-start": "sudo kill -9 `sudo lsof -t -i:3000` && yarn start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
